排序，冒泡、选择、插入、快排